Finish basic game logic

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Rock Paper Scissors</title>
+
+    <link href="css/reset.css" rel="stylesheet" type="text/css" media="all"/>
 </head>
 <body>
+    <div id="content-container">
+        <div id="scoreboard">0:0</div>
+        <div id="result-msg"></div>
+        <button class="main-button" id="rock-button">Rock</button>
+        <button class="main-button" id="paper-button">Paper</button>
+        <button class="main-button" id="scissors-button">Scissors</button>
+    </div>
+
     <script src="./script.js"></script>
-    
 </body>
 </html>
