--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <title>Rock Paper Scissors</title>
 
     <link href="css/reset.css" rel="stylesheet" type="text/css" media="all"/>
+    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all"/>
+
 </head>
 <body>
     <div id="content-container">
         <div id="scoreboard">0:0</div>
         <div id="result-msg"></div>
-        <button class="main-button" id="rock-button">Rock</button>
-        <button class="main-button" id="paper-button">Paper</button>
-        <button class="main-button" id="scissors-button">Scissors</button>
+        <div class="button-container">
+          <button class="main-button" id="rock"><img src="img/rock.png" alt="Rock"></button>
+          <button class="main-button" id="paper"><img src="img/paper.png" alt="Paper"></button>
+          <button class="main-button" id="scissors"><img src="img/scissors.png" alt="Scissors"></button>
+        </div>
     </div>
 
     <script src="./script.js"></script>
