Apply styles to buttons and background

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-  <div id="restart-container">
+  <div id="restart-button">
     <span class="material-icons">restart_alt</span>
   </div>
   <div id="content-container">
